image stretch fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -229,7 +229,7 @@ text-align: right;
 }
 
 .artistItem img {
-	max-height: 50vh;
+	max-height: auto;
 	max-width: 40vw;
 }
 
